# drillcore-transformations

./: .copier-answers.yml  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  .yamllint.yml  AUTHORS.rst  CHANGELOG.md  CITATION.cff  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  Pipfile  README.rst  config.ini  dodo.py  noxfile.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tasks.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test-and-publish.yaml
borehole_transformations/: __init__.py  cli.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  requirements_dev.txt  usage.rst
docs/apidoc/: drillcore_transformations.rst  drillcore_transformations_py.rst  modules.rst
docs_src/: conf.py  index.rst  installation.rst  requirements.txt  usage.rst
docs_src/apidoc/: drillcore_transformations.cli.rst  drillcore_transformations.rst  drillcore_transformations.transformations.rst  drillcore_transformations.usage.rst  drillcore_transformations.visualizations.rst  modules.rst
drillcore_transformations/: __init__.py  __main__.py  cli.py  config.ini  transformations.py  usage.py  visualizations.py
drillcore_transformations_py/: cli.py  column_names.ini  drillcore_transformations.py  drillcore_transformations_usage.py  gamma_rotation.py  transformations.py  usage.py  visualizations.py
examples/: README.rst
notebooks/: visualization_of_measurements.ipynb
sample_data/: Logging_sheet.csv  Logging_sheet_orient_calculated.csv  depth_sample.csv  depth_sample.xls  depth_sample.xlsx  measurement_sample.csv  measurement_sample.xls  measurement_sample.xlsx
tests/: __init__.py  _profile.py  test_borehole_transformations.py  test_cli.py  test_drillcore_transformations.py  test_drillcore_transformations_py.py  test_transformations.py  test_usage.py  test_visualizations.py
